alterado o model - bug com os belongs_to

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <table>
+        <tr>
+            <td><%= link_to "Prefeito", prefeitos_path %></td>
+        </tr>
+    </table>
+
 <%= yield %>
 
 </body>
