Alterações do Carbona

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 <h3>Importações de dados:</h3>
 <table>
     <tr>
-        <td><%= link_to "candidatos", candidatos_path %></td>
+        <td><%= link_to "candidatos", candidatos_import_path %></td>
         <td><%= link_to "cargos", cargos_path %></td>
         <td><%= link_to "cidades", cidades_path %></td>
         <td><%= link_to "estados", estados_path %></td>
